external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/conflict_deny_expect.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10008]: ambiguous attribute value
  ┌─ tests/move_check/warning_suppression/conflict_deny_expect.move:2:8
  │
2 │ #[deny(unused_variable)]
  │        ^^^^^^^^^^^^^^^ Conflicting filter for 'unused_variable' specified in the same attribute
3 │ #[expect(unused_variable)]
  │          --------------- Conflicting filter for 'unused_variable' specified here

error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/conflict_deny_expect.move:5:13
  │
2 │ #[deny(unused_variable)]
  │        --------------- the lint level is defined here
  ·
5 │     fun foo(a: u64) {
  │             ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'

error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/conflict_deny_expect.move:6:13
  │
2 │ #[deny(unused_variable)]
  │        --------------- the lint level is defined here
  ·
6 │         let x;
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
